# r2d2_manipulator_control

./: .gitignore  CMakeLists.txt  package.xml  rosconsole.conf
config/example/: convert_rate.json  joints.json  manipulator.json
include/manipulator_control/: ElbowHandler.h  HornerPolynome.h  JointHandler.h  JointHandler.hpp  ManipulatorControl.h  ManipulatorControl.hpp  ManipulatorControlHandler.h  ManipulatorService.h  ManipulatorService.hpp  PayloadHandler.h  PayloadHandler.hpp  PipeHandler.h  PipeHandler.hpp  Polynome.h  ShoulderHandler.h  TopicAwait.hpp  TopicService.hpp
include/manipulator_control/utils/: Config.h  Config.hpp  ConfigJSON.h  ConfigJson.hpp  Custom.h  Custom.hpp  CustomDebug.h  Debug.h  Debug.hpp  IConfigJson.hpp  Logger.h  Math.h  Math.hpp  Polynome.h  Polynome.hpp  Types.h  Types.hpp
launch/: manipulator_control.launch  manipulator_control.xml  manipulator_control_all.launch  manipulator_control_debug.launch  manipulators_control.launch
src/: ConfigJson.cpp  ConfigMath.cpp  ElbowHandler.cpp  HornerPolynome.cpp  IConfigJson.cpp  JointHandler.cpp  Json.cpp  ManipulatorControl.cpp  ManipulatorService.cpp  Math.cpp  PayloadHandler.cpp  PipeHandler.cpp  ShoulderHandler.cpp  manipulator_control_node.cpp
srv/: ManipulatorCommand.srv  SetLockStatus.srv  SetNozzleType.srv  SetWorkMode.srv
