<?xml version="1.0"?>
<package format="2">
  <name>manipulator_control</name>
  <version>1.2.0</version>
  <description>The manipulator_control package</description>

  <maintainer email="s.kripachev@rtc.ru">memeLordo</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <author email="s.kripachev@rtc.ru">memeLordo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>r2d2_msg_pkg</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>r2d2_msg_pkg</exec_depend>

</package>
